udpate gem file and fix overflow on track show

--- a/app/assets/stylesheets/api/library.scss
+++ b/app/assets/stylesheets/api/library.scss
@@ -5,7 +5,6 @@
     flex-direction: column;
     align-content: flex-start;
     align-items: flex-start;
-    // width: 21%;
 }
 
 .wrapper{
@@ -16,8 +15,7 @@
     justify-content: flex-start;
 }
 .likes-container{
-     display: flex;
-    overflow-x: auto;
+    display: flex;
     flex-direction: row;
     justify-content: flex-start;
 }
